# android-rust-jni

./: .gitignore  README.md  com_dede_rust_jni_RustJNI.h
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dede/rust/jni/: MainActivity.kt  RustJNI.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
rust/: Cargo.toml
rust/src/: lib.rs
